# bits

./: .gitignore  README.md  XDASetup.sh  flake.nix  pyproject.toml
.github/workflows/: tests.yml
data/test/default/: acturella_TrabalhoProgRetangulo_compiled  archoo_twfy_compiled  arfar_glob-escape_compiled  arghasen_Poker_compiled  bfocht_pluto-lzo_compiled  bob-nomann_work_compiled  cgilliard_bitstore_compiled
data/train/default/: Euphie_cute_compiled  GrabherrGroup_ryggrad_compiled  Kannagi_SNES-Mode7_compiled  cservan_wookie_project_compiled  curtisai_PlayGround_compiled  fifolilo_IVF-Parser_compiled  iago-_Nathy_compiled  jmburbach_joypack_compiled  lalawue_jpeg_dec_compiled  m13253_bf2nasm_compiled  mbeichorn_EichornCAD_compiled  mikemccann_stoqs_compiled  mohag_date_compiled  mth_hirc_compiled  mzhaom_lrte_compiled  ossjb_clj-mandel_compiled  paulster468_fin1_compiled  renatofilho_QtCreator_compiled  suntecjianglei_helloworld_compiled  themez_algorithm_compiled  timhavens_driveby_compiled  tliesnham_primec_compiled  willdonnelly_shsel_compiled  xalalau_Instaleytor_compiled  ydm_multithreaded-mergesort_compiled  ylevine_VibrantScript_compiled  zspicklemire_CSCI504_cuda_project_compiled
docs/: preprocessor-pipeline.mermaid
evals/: 2026-03-12_d140k_e5_bs256_lr1e-4_cw5_ilw0_5.txt  2026-03-13_d140k_e5_bs256_lr1e-4_cw5_ilw0_5.txt
jobs/: train140k.sh  train140k_w5.sh
scripts/: DownloadTheStack.py  MergeBinaryArchives.py  ObjectToBinary.py  SH2O.py
scripts/legacy/: BigQuery_GitHub_C.sql  CompilePipeline.py  DGithubJSON2FILE.py  compile_c_projects.py
scripts/pipeline/: Dockerfile.compile  collect_binaries.py  compile_all.py  compile_package.py  docker_collect.sh  docker_compile.sh  download_debian_sources.py  download_gnu_sources.py  download_thestack.py  generate_package_list.py  slurm_compile.sh  slurm_download.sh
src/reveng_ml/: cli.py  data.py  evaluate.py  model.py  trainer.py  utils.py
src/reveng_ml/ComparativeEvaluation/: InferXDA.py  runInferXDA.sh
src/reveng_ml/ComparativeEvaluation/XDA/fairseq/: checkpoint_utils.py
src/reveng_ml/ComparativeEvaluation/XDA/fairseq/modules/: dynamic_crf_layer.py
tests/: test_data.py  test_evaluator.py  test_model.py  test_trainer.py  test_utils.py
