[project]
name = "reveng-ml"
version = "0.1.0"
description = "An ML pipeline to identify function boundaries in stripped binary files"

readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "pyelftools>=0.30",
    "capstone>=5.0.0",
    "datasets>=2.15.0",
    "scikit-learn>=1.3.2",
    "typer[all]>=0.9.0",
    "tqdm>=4.66.1",
    "pytest>=7.4.3",
    "ruff>=0.1.5",
    "pytest>=7.4.3",
    "pytest-cov>=7.1.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
]

[tool.coverage.run]
omit = [
    # Exclude the CLI and main entry point from coverage, as they are not easily testable
    "src/reveng_ml/__init__.py",
    "src/reveng_ml/__main__.py",
    "src/reveng_ml/cli.py",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
